# cmcstl2

./: .cirrus.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  cmcstl2.sln  cmcstl2.vcxproj  cmcstl2.vcxproj.filters  conanfile.py  foo.cpp  stl2.pro
benchmark/: CMakeLists.txt  itinerary.cpp
cmake/: FindSanitizer.cmake
config/ci/: Dockerfile
config/cmake/: FindSanitizer.cmake
examples/: CMakeLists.txt  simple.cpp
include/experimental/ranges/: algorithm  concepts  functional  iterator  memory  numeric  random  range  ranges  type_traits  utility
include/experimental/ranges_v1/: iterator  tuple
include/meta/: meta.hpp  meta_fwd.hpp
include/stl2/: algorithm.hpp  common_type.hpp  concepts.hpp  functional.hpp  iterator.hpp  memory.hpp  numeric.hpp  optional.hpp  random.hpp  ranges.hpp  tuple.hpp  type_traits.hpp  uninitialized_algorithms.hpp  utility  utility.hpp  variant.hpp
include/stl2/concept/: all.hpp  core.hpp  foundational.hpp  function.hpp  iterator.hpp  range.hpp  test.hpp
include/stl2/concepts/: all.hpp  compare.hpp  core.hpp  foundational.hpp  function.hpp  iterator.hpp  object.hpp  range.hpp
include/stl2/detail/: cached_position.hpp  cheap_storage.hpp  closure.hpp  common_tuple.hpp  compressed_pair.hpp  config.hpp  construct_destruct.hpp  destroy.hpp  ebo_box.hpp  ebo_storage.hpp  fwd.hpp  gnu_tuple_hack.hpp  hash.hpp  in_place.hpp  meta.hpp  non_propagating_cache.hpp  operator_arrow.hpp  randutils.hpp  raw_ptr.hpp  semiregular_box.hpp  smf_control.hpp  span.hpp  swap.hpp  tagged.hpp  temporary_vector.hpp  to.hpp  tuple_like.hpp  uninitialized_algorithm.hpp  uninitialized_algorithms.hpp  uninitialized_copy.hpp  uninitialized_fill.hpp  variant.hpp
include/stl2/detail/algorithm/: adjacent_find.hpp  all_of.hpp  any_of.hpp  binary_search.hpp  copy.hpp  copy_backward.hpp  copy_if.hpp  copy_n.hpp  count.hpp  count_if.hpp  equal.hpp  equal_range.hpp  fill.hpp  fill_n.hpp  find.hpp  find_end.hpp  find_first_of.hpp  find_if.hpp  find_if_not.hpp  for_each.hpp  forward_sort.hpp  generate.hpp  generate_n.hpp  heap_sift.hpp  includes.hpp  inplace_merge.hpp  is_heap.hpp  is_heap_until.hpp  is_partitioned.hpp  is_permutation.hpp  is_sorted.hpp  is_sorted_until.hpp  lexicographical_compare.hpp  lower_bound.hpp  make_heap.hpp  max.hpp  max_element.hpp  merge.hpp  merge_move.hpp  min.hpp  (+54 more)
include/stl2/detail/concepts/: algorithm.hpp  arithmetic.hpp  callable.hpp  compare.hpp  container.hpp  core.hpp  fold_expressions.hpp  function.hpp  fundamental.hpp  increment.hpp  iterator.hpp  number.hpp  numeric.hpp  object.hpp  range.hpp  regular.hpp  semiregular.hpp  urng.hpp
include/stl2/detail/functional/: arithmetic.hpp  callable_wrapper.hpp  comparisons.hpp  (+2 more)
include/stl2/meta/: meta.hpp  meta_fwd.hpp
include/stl2/view/: all.hpp  bounded.hpp  common.hpp  const.hpp  counted.hpp  drop.hpp  drop_while.hpp  elements.hpp  empty.hpp  filter.hpp  generate.hpp  indirect.hpp  iota.hpp  istream.hpp  iterator_range.hpp  join.hpp  move.hpp  orbit.hpp  ref.hpp  repeat.hpp  repeat_n.hpp  reverse.hpp  single.hpp  single_ref.hpp  span.hpp  split.hpp  stride.hpp  subrange.hpp  take.hpp  take_exactly.hpp  take_while.hpp  transform.hpp  view_interface.hpp  zip.hpp  zip_with.hpp
scratch/: bug.cpp  swap_expressions.cpp
test/: CMakeLists.txt  all_public_headers.hpp  common-libcxx.hpp  common-libstdcxx.hpp  common.cpp  concept_select.txt  copymove.hpp  core_concepts.cpp  foundational.cpp  headers.cpp  headers1.cpp  headers2.cpp  iterator.cpp  meta.cpp  move_only_string.hpp  optional.cpp  range_access.cpp  raw_ptr.cpp  simple_test.hpp  single_pass_array.hpp  span.cpp  swap.cpp  tagged.cpp  test_iterators.hpp  test_utils.hpp  to.cpp  variant.cpp
test/algorithm/: CMakeLists.txt  adjacent_find.cpp  all_of.cpp  any_of.cpp  binary_search.cpp  copy.cpp  copy_backward.cpp  copy_if.cpp  copy_n.cpp  count.cpp  count_if.cpp  equal.cpp  equal_range.cpp  fill.cpp  fill_n.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  find_if_not.cpp  for_each.cpp  generate.cpp  generate_n.cpp  includes.cpp  inplace_merge.cpp  is_heap.hpp  is_heap_until.hpp  is_partitioned.cpp  is_permutation.cpp  is_sorted.cpp  is_sorted_until.cpp  lexicographical_compare.cpp  lower_bound.cpp  make_heap.cpp  max.cpp  max_element.cpp  merge.cpp  merge_move.cpp  min.cpp  min_element.cpp  (+70 more)
test/concepts/: CMakeLists.txt  arithmetic.cpp  compare.cpp  copymove.hpp  core.cpp  fundamental.cpp  integer.cpp  iterator.cpp  number.cpp  object.cpp  range.cpp  swap.cpp  validate.hpp
test/concepts/numeric/: CMakeLists.txt  models.hpp  numeric.cpp
test/detail/: CMakeLists.txt  int128.hpp  raw_ptr.cpp  temporary_vector.cpp  test_interface.hpp
test/functional/: CMakeLists.txt  invoke.cpp  not_fn.cpp
test/iterator/: CMakeLists.txt  any_iterator.cpp  basic_iterator.cpp  common_iterator.cpp  counted_iterator.cpp  incomplete.cpp  istream_iterator.cpp  istreambuf_iterator.cpp  iterator.cpp  make_range.cpp  move_iterator.cpp  operations.cpp  ostream_iterator.cpp  ostreambuf_iterator.cpp  reverse_iterator.cpp  test_iterators.hpp  unreachable.cpp
test/memory/: Book.hpp  CMakeLists.txt  Makefile  common.hpp  destroy.cpp  raii.hpp  raw_buffer.hpp  uninitialized_copy.cpp  uninitialized_default_construct.cpp  uninitialized_fill.cpp  uninitialized_move.cpp  uninitialized_value_construct.cpp
test/numeric/: CMakeLists.txt  accumulate.cpp  adjacent_difference.cpp  gcd.cpp  inner_product.cpp  iota.cpp  lcm.cpp  partial_sum.cpp  test_interface.hpp
test/view/: CMakeLists.txt  bounded_view.cpp  common_view.cpp  const_view.cpp  counted_view.cpp  drop_view.cpp  drop_while_view.cpp  elements.cpp  empty_view.cpp  filter_view.cpp  generate_view.cpp  indirect_view.cpp  istream_view.cpp  join_view.cpp  move_view.cpp  ref_view.cpp  repeat_n_view.cpp  repeat_view.cpp  reverse_view.cpp  single_ref_view.cpp  single_view.cpp  span.cpp  split_view.cpp  stride_view.cpp  subrange.cpp  take_exactly_view.cpp  take_view.cpp  take_while_view.cpp  transform_view.cpp  zip_view.cpp  zip_with_view.cpp
(+65 files in other folders)
