include("../concept_select.txt")

add_executable(alg.adjacent_find adjacent_find.cpp)
add_test(test.alg.adjacent_find alg.adjacent_find)

add_executable(alg.all_of all_of.cpp)
add_test(test.alg.all_of alg.all_of)

add_executable(alg.any_of any_of.cpp)
add_test(test.alg.any_of alg.any_of)

add_executable(alg.copy copy.cpp)
add_test(test.alg.copy alg.copy)

add_executable(alg.copy_backward copy_backward.cpp)
add_test(test.alg.copy_backward alg.copy_backward)

add_executable(alg.copy_if copy_if.cpp)
add_test(test.alg.copy_if alg.copy_if)

add_executable(alg.copy_n copy_n.cpp)
add_test(test.alg.copy_n alg.copy_n)

add_executable(alg.count count.cpp)
add_test(test.alg.count alg.count)

add_executable(alg.count_if count_if.cpp)
add_test(test.alg.count_if alg.count_if)

add_executable(alg.equal equal.cpp)
add_test(test.alg.equal alg.equal)

add_executable(alg.fill fill.cpp)
add_test(test.alg.fill alg.fill)

add_executable(alg.fill_n fill_n.cpp)
add_test(test.alg.fill_n alg.fill_n)

add_executable(alg.find find.cpp)
add_test(test.alg.find alg.find)

add_executable(alg.find_end find_end.cpp)
add_test(test.alg.find_end alg.find_end)

add_executable(alg.find_first_of find_first_of.cpp)
add_test(test.alg.find_first_of alg.find_first_of)

add_executable(alg.find_if find_if.cpp)
add_test(test.alg.find_if alg.find_if)

add_executable(alg.find_if_not find_if_not.cpp)
add_test(test.alg.find_if_not alg.find_if_not)

add_executable(alg.for_each for_each.cpp)
add_test(test.alg.for_each alg.for_each)

add_executable(alg.generate generate.cpp)
add_test(test.alg.generate alg.generate)

add_executable(alg.generate_n generate_n.cpp)
add_test(test.alg.generate_n alg.generate_n)

add_executable(alg.is_permutation is_permutation.cpp)
add_test(test.alg.is_permutation alg.is_permutation)

add_executable(alg.mismatch mismatch.cpp)
add_test(test.alg.mismatch alg.mismatch)

add_executable(alg.move move.cpp)
add_test(test.alg.move alg.move)

add_executable(alg.move_backward move_backward.cpp)
add_test(test.alg.move_backward alg.move_backward)

add_executable(alg.none_of none_of.cpp)
add_test(test.alg.none_of alg.none_of)

add_executable(alg.remove remove.cpp)
add_test(test.alg.remove alg.remove)

add_executable(alg.remove_copy remove_copy.cpp)
add_test(test.alg.remove_copy alg.remove_copy)

add_executable(alg.remove_copy_if remove_copy_if.cpp)
add_test(test.alg.remove_copy_if alg.remove_copy_if)

add_executable(alg.remove_if remove_if.cpp)
add_test(test.alg.remove_if alg.remove_if)

add_executable(alg.replace replace.cpp)
add_test(test.alg.replace alg.replace)

add_executable(alg.replace_copy replace_copy.cpp)
add_test(test.alg.replace_copy alg.replace_copy)

add_executable(alg.replace_copy_if replace_copy_if.cpp)
add_test(test.alg.replace_copy_if alg.replace_copy_if)

add_executable(alg.replace_if replace_if.cpp)
add_test(test.alg.replace_if alg.replace_if)

add_executable(alg.reverse reverse.cpp)
add_test(test.alg.reverse alg.reverse)

add_executable(alg.reverse_copy reverse_copy.cpp)
add_test(test.alg.reverse_copy alg.reverse_copy)

add_executable(alg.rotate rotate.cpp)
add_test(test.alg.rotate alg.rotate)

add_executable(alg.rotate_copy rotate_copy.cpp)
add_test(test.alg.rotate_copy alg.rotate_copy)

add_executable(alg.search search.cpp)
add_test(test.alg.search alg.search)

add_executable(alg.search_n search_n.cpp)
add_test(test.alg.search_n alg.search_n)

add_executable(alg.shuffle shuffle.cpp)
add_test(test.alg.shuffle alg.shuffle)

add_executable(alg.swap_ranges swap_ranges.cpp)
add_test(test.alg.swap_ranges alg.swap_ranges)

add_executable(alg.transform transform.cpp)
add_test(test.alg.transform alg.transform)

add_executable(alg.unique unique.cpp)
add_test(test.alg.unique alg.unique)

add_executable(alg.unique_copy unique_copy.cpp)
add_test(test.alg.unique_copy alg.unique_copy)
