add_executable(core core.cpp)
add_test(test.concepts.core core)

add_executable(compare compare.cpp)
add_test(test.concepts.compare compare)

add_executable(object object.cpp)
add_test(test.concepts.object object)

add_executable(iterator iterator.cpp)
add_test(test.concepts.iterator iterator)

add_executable(swap swap.cpp)
add_test(test.swap swap)
