add_executable(accumulate accumulate.cpp)
add_test(test.numeric.accumulate accumulate)

add_executable(adjacent_difference adjacent_difference.cpp)
add_test(test.numeric.adjacent_difference adjacent_difference)

#add_executable(exclusive_scan exclusive_scan.cpp)
#add_test(test.numeric.exclusive_scan exclusive_scan)

#add_executable(gcd gcd.cpp)
#add_test(test.numeric.gcd gcd)

#add_executable(inclusive_scan inclusive_scan.cpp)
#add_test(test.numeric.inclusive_scan inclusive_scan)

add_executable(inner_product inner_product.cpp)
add_test(test.numeric.inner_product inner_product)

#add_executable(iota iota.cpp)
#add_test(test.numeric.iota iota)

#add_executable(lcm lcm.cpp)
#add_test(test.numeric.lcm lcm)

add_executable(partial_sum partial_sum.cpp)
add_test(test.numeric.partial_sum partial_sum)

# add_executable(reduce reduce.cpp)
# add_test(test.numeric.reduce reduce)

#add_executable(transform_exclusive_scan transform_exclusive_scan.cpp)
#add_test(test.numeric.transform_exclusive_scan transform_exclusive_scan)

#add_executable(transform_inclusive_scan transform_inclusive_scan.cpp)
#add_test(test.numeric.transform_inclusive_scan transform_inclusive_scan)

# add_executable(transform_reduce transform_reduce.cpp)
# add_test(test.transform_reduce transform_reduce)
