add_executable(numeric.accumulate accumulate.cpp)
add_test(test.numeric.accumulate numeric.accumulate)

add_executable(numeric.adjacent_difference adjacent_difference.cpp)
add_test(test.numeric.adjacent_difference numeric.adjacent_difference)

#add_executable(numeric.exclusive_scan exclusive_scan.cpp)
#add_test(test.numeric.exclusive_scan numeric.exclusive_scan)

#add_executable(numeric.gcd gcd.cpp)
#add_test(test.numeric.gcd numeric.gcd)

#add_executable(numeric.inclusive_scan inclusive_scan.cpp)
#add_test(test.numeric.inclusive_scan numeric.inclusive_scan)

add_executable(numeric.inner_product inner_product.cpp)
add_test(test.numeric.inner_product numeric.inner_product)

#add_executable(numeric.iota iota.cpp)
#add_test(test.numeric.iota numeric.iota)

#add_executable(numeric.lcm lcm.cpp)
#add_test(test.numeric.lcm numeric.lcm)

add_executable(numeric.partial_sum partial_sum.cpp)
add_test(test.numeric.partial_sum numeric.partial_sum)

# add_executable(numeric.reduce reduce.cpp)
# add_test(test.numeric.reduce numeric.reduce)

#add_executable(numeric.transform_exclusive_scan transform_exclusive_scan.cpp)
#add_test(test.numeric.transform_exclusive_scan numeric.transform_exclusive_scan)

#add_executable(numeric.transform_inclusive_scan transform_inclusive_scan.cpp)
#add_test(test.numeric.transform_inclusive_scan numeric.transform_inclusive_scan)

# add_executable(numeric.transform_reduce transform_reduce.cpp)
# add_test(test.transform_reduce numeric.transform_reduce)
